compiler/testData/diagnostics/tests/suppress/oneWarning/onFunction.kt
// FIR_IDENTICAL
class C {
    @Suppress("REDUNDANT_NULLABLE")
    fun foo(): String?? = null <!USELESS_CAST!>as Nothing??<!>
}